--- a/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
+++ b/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
@@ -39,7 +39,7 @@ limitations under the License.
     </watt-stepper-step>
 
     <watt-stepper-step
-      [stepControl]="contactDetailsForm"
+      [stepControl]="addressDetailsForm"
       [label]="t('steps.addressDetails.label')"
       [previousButtonLabel]="t('steps.contactDetails.label')"
       [nextButtonLabel]="t('save')"
