--- a/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
+++ b/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
@@ -44,11 +44,11 @@ limitations under the License.
       [previousButtonLabel]="t('steps.contactDetails.label')"
       [nextButtonLabel]="t('save')"
     >
-      <dh-address-details-form
-        [addressDetailsForm]="addressDetailsForm"
-        (resetLegalForm)="emptyLegalAddressFormGroup()"
-        (resetTechnicalForm)="emptyTechnicalAddressFormGroup()"
-      />
+      <dh-address-details-form [addressDetailsForm]="addressDetailsForm"
+                               (resetLegalForm)="emptyLegalAddressFormGroup()"
+                               (resetTechnicalForm)="emptyTechnicalAddressFormGroup()"
+                               (pasteLegalFormDataIntoTechnicalForm)="pasteLegalFormDataIntoTechnicalForm()"
+                               (pasteTechnicalFormDataIntoLegalForm)="pasteTechnicalFormDataIntoLegalForm()"/>
     </watt-stepper-step>
   </watt-stepper>
 </watt-modal>
