test pink variables

--- a/libs/watt/package/core/styles/@energinet-datahub/watt/_index.scss
+++ b/libs/watt/package/core/styles/@energinet-datahub/watt/_index.scss
@@ -23,7 +23,8 @@
 @use "../../table";
 @use "../../tokens";
 @use "../../tooltip";
-@use "../../variables";
+//@use "../../variables";
+@use "../../variables-test-theme";
 @use "../../vater";
 @use "../../spacing";
 @use "../../typography";
