--- a/libs/dh/core/shell/src/lib/dh-core-shell.component.scss
+++ b/libs/dh/core/shell/src/lib/dh-core-shell.component.scss
@@ -23,7 +23,7 @@
 
 .sidenav {
   display: flex;
-  justify-content: center;
+  justify-content: start;
 }
 
 .selected-actor-container {
@@ -32,7 +32,7 @@
 }
 
 .logo--sidenav {
-  width: 100%;
+  width: 60%;
   margin: var(--watt-space-m) 0;
 }
 
