--- a/libs/watt/package/core/styles/_variables.scss
+++ b/libs/watt/package/core/styles/_variables.scss
@@ -102,6 +102,6 @@
 
   // Components
   --watt-sidenav-background-color: #09505d;
-  --watt-nav-list-hover-background-color: var(--watt-color-primary);
-  --watt-nav-list-active-background-color: #07404a;
+  --watt-nav-list-active-background-color: var(--watt-color-primary);
+  --watt-nav-list-hover-background-color: var(--watt-color-primary, 0.85);
 }
