--- a/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
+++ b/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
@@ -23,23 +23,15 @@ limitations under the License.
     <vater-flex direction="column" gap="l">
       <div class="items-group">
         <watt-datepicker [range]="true" [label]="t('period')" [formControl]="form.controls.period">
-          @if (form.controls.period.hasError("maxDays")) {
-            <watt-field-error>
+          <watt-field-error>
+            @if (form.controls.period.hasError("maxDays")) {
               {{ t("maxDays") }}
-            </watt-field-error>
-          }
-
-          @if (form.controls.period.hasError("selectEntireMonths")) {
-            <watt-field-error>
+            } @else if (form.controls.period.hasError("selectEntireMonths")) {
               {{ t("selectEntireMonths") }}
-            </watt-field-error>
-          }
-
-          @if (form.controls.period.hasError("maxMonths")) {
-            <watt-field-error>
+            } @else if (form.controls.period.hasError("maxMonths")) {
               {{ t("maxMonths") }}
-            </watt-field-error>
-          }
+            }
+          </watt-field-error>
         </watt-datepicker>
 
         <watt-checkbox [formControl]="form.controls.switchToMeteringPointIDs">
@@ -54,23 +46,23 @@ limitations under the License.
             [label]="t('meteringPointIDsLabel')"
           >
             <watt-field-hint>{{ t("meteringPointIDsHintOne") }}</watt-field-hint>
-            <watt-field-hint>{{
-              t("meteringPointIDsHintTwo", { maxIDs: maxIDs })
-            }}</watt-field-hint>
+            <watt-field-hint>
+              {{ t("meteringPointIDsHintTwo", { maxIDs: maxIDs }) }}
+            </watt-field-hint>
 
-            @if (form.controls.meteringPointIDs.hasError("invalidMeteringPointIDs")) {
-              <watt-field-error>{{ t("invalidMeteringPointIDs") }}</watt-field-error>
-            }
-
-            @if (form.controls.meteringPointIDs.hasError("maxMeteringPointIDsExceeded")) {
-              <watt-field-error>{{
-                t("maxMeteringPointIDsExceeded", {
-                  maxIDs: maxIDs,
-                  currentNumber: normalizeMeteringPointIDs(form.controls.meteringPointIDs.value)
-                    .length,
-                })
-              }}</watt-field-error>
-            }
+            <watt-field-error>
+              @if (form.controls.meteringPointIDs.hasError("invalidMeteringPointIDs")) {
+                {{ t("invalidMeteringPointIDs") }}
+              } @else if (form.controls.meteringPointIDs.hasError("maxMeteringPointIDsExceeded")) {
+                {{
+                  t("maxMeteringPointIDsExceeded", {
+                    maxIDs: maxIDs,
+                    currentNumber: normalizeMeteringPointIDs(form.controls.meteringPointIDs.value)
+                      .length,
+                  })
+                }}
+              }
+            </watt-field-error>
           </watt-textarea-field>
         </div>
       }
