--- a/libs/dh/admin/feature-user-roles/src/lib/details/edit.component.html
+++ b/libs/dh/admin/feature-user-roles/src/lib/details/edit.component.html
@@ -34,13 +34,12 @@ limitations under the License.
             [label]="t('tab.masterData.nameInputLabel')"
             [formControl]="userRoleEditForm.controls.name"
           >
-            @if (userRoleEditForm.controls.name.hasError("nameAlreadyExists")) {
-              <watt-field-error>
+            <watt-field-error>
+              @if (userRoleEditForm.controls.name.hasError("nameAlreadyExists")) {
                 {{ t("tab.validationErrors.nameAlreadyExists") }}
-              </watt-field-error>
-            }
+              }
+            </watt-field-error>
           </watt-text-field>
-
           <watt-textarea-field
             [label]="t('tab.masterData.descriptionInputLabel')"
             [formControl]="userRoleEditForm.controls.description"
@@ -57,6 +56,7 @@ limitations under the License.
             userRoleEditForm.controls.permissionIds.hasError("required")
           ) {
             <div class="watt-space-stack-m">
+              <!-- eslint-disable-next-line -->
               <watt-field-error>{{
                 t("tab.validationErrors.permissionRequired")
               }}</watt-field-error>
