feat(dh): add 404 page

--- a/libs/watt/package/icon/+storybook/storybook-icon-overview.component.html
+++ b/libs/watt/package/icon/+storybook/storybook-icon-overview.component.html
@@ -38,6 +38,12 @@ limitations under the License.
     </watt-icon>
     <figcaption>custom-no-results</figcaption>
   </figure>
+  <figure>
+    <watt-icon size="xl">
+      <watt-empty-state-not-found />
+    </watt-icon>
+    <figcaption>custom-not-found</figcaption>
+  </figure>
 </div>
 
 <div class="groups custom-icons">
