Collapse height if watt-field contains no hint or error

--- a/libs/watt/package/field/watt-field.component.scss
+++ b/libs/watt/package/field/watt-field.component.scss
@@ -94,11 +94,11 @@ watt-field {
   width: 100%;
   display: block;
 
-  &:not(.watt-field--chip) {
+  &:not(.watt-field--chip):has(watt-field-error, watt-field-hint) {
     min-height: 93px;
   }
 
-  &:not(.watt-field--chip).watt-field--unlabelled {
+  &:not(.watt-field--chip).watt-field--unlabelled:has(watt-field-error, watt-field-hint) {
     min-height: 66px;
   }
 
