chore: changes dialog radius

--- a/libs/watt/package/core/styles/@energinet-datahub/watt/_index.scss
+++ b/libs/watt/package/core/styles/@energinet-datahub/watt/_index.scss
@@ -54,5 +54,5 @@ textarea {
 }
 
 .mat-mdc-dialog-surface.mdc-dialog__surface {
-  --mat-dialog-container-shape: var(--watt-radius-l);
+  --mat-dialog-container-shape: var(--watt-radius-m);
 }
