Project watt-field-warning in parent components

--- a/libs/watt/package/picker/datepicker/watt-datepicker.component.html
+++ b/libs/watt/package/picker/datepicker/watt-datepicker.component.html
@@ -118,6 +118,7 @@ limitations under the License.
   <ng-content />
   <ng-content ngProjectAs="watt-field-hint" select="watt-field-hint" />
   <ng-content ngProjectAs="watt-field-error" select="watt-field-error" />
+  <ng-content ngProjectAs="watt-field-warning" select="watt-field-warning" />
 </watt-field>
 
 @if (!range && canStepThroughDays()) {
