--- a/libs/watt/package/field/watt-field.component.scss
+++ b/libs/watt/package/field/watt-field.component.scss
@@ -38,15 +38,15 @@ form.ng-submitted .ng-invalid,
     display: none;
   }
 
-  & watt-field :is(watt-field-error, watt-field-warning) {
+  & watt-field.watt-field--show-errors :is(watt-field-error, watt-field-warning) {
     display: block;
   }
 
-  & watt-field .watt-field-wrapper {
+  & watt-field.watt-field--show-errors .watt-field-wrapper {
     border-color: var(--watt-color-state-danger);
   }
 
-  & watt-field .label {
+  & watt-field.watt-field--show-errors .label {
     color: var(--watt-color-state-danger);
 
     &.required::after {
