--- a/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
+++ b/libs/dh/metering-point/feature-move-in/src/components/move-in.component.html
@@ -44,13 +44,7 @@ limitations under the License.
       [previousButtonLabel]="t('steps.contactDetails.label')"
       [nextButtonLabel]="t('save')"
     >
-      <dh-address-details-form
-        [addressDetailsForm]="addressDetailsForm"
-        (resetLegalForm)="emptyLegalAddressFormGroup()"
-        (resetTechnicalForm)="emptyTechnicalAddressFormGroup()"
-        (pasteLegalFormDataIntoTechnicalForm)="pasteLegalFormDataIntoTechnicalForm()"
-        (pasteTechnicalFormDataIntoLegalForm)="pasteTechnicalFormDataIntoLegalForm()"
-      />
+      <dh-address-details-form [addressDetailsForm]="addressDetailsForm" />
     </watt-stepper-step>
   </watt-stepper>
 </watt-modal>
