feat(watt, drawer): add medium size option to WattDrawer component

--- a/libs/watt/package/drawer/watt-drawer.component.scss
+++ b/libs/watt/package/drawer/watt-drawer.component.scss
@@ -61,6 +61,11 @@
     max-width: 100vw;
   }
 
+  &--medium {
+    width: 906px;
+    max-width: 100vw;
+  }
+
   &--large {
     width: 1174px;
     max-width: 100vw;
