fix(watt): expose transitions variables

--- a/libs/watt/package/core/styles/@energinet-datahub/watt/_index.scss
+++ b/libs/watt/package/core/styles/@energinet-datahub/watt/_index.scss
@@ -21,6 +21,7 @@
 @use "../../elevation";
 @use "../../hr";
 @use "../../radius";
+@use "../../transitions";
 @use "../../table";
 @use "../../tokens";
 @use "../../tooltip";
