fix(dh): remove hard-coded values

--- a/libs/watt/package/core/styles/_transitions.scss
+++ b/libs/watt/package/core/styles/_transitions.scss
@@ -13,6 +13,7 @@
 // limitations under the License.
 :root {
   // Time
+  --watt-faster-than-a-blink-of-an-eye: 50ms;
   --watt-time-extra-short: 100ms;
   --watt-time-short: 200ms;
   --watt-time-medium: 300ms;
