--- a/libs/watt/package/core/styles/_variables.scss
+++ b/libs/watt/package/core/styles/_variables.scss
@@ -103,5 +103,5 @@
   // Components
   --watt-sidenav-background-color: #09505d;
   --watt-nav-list-active-background-color: var(--watt-color-primary);
-  --watt-nav-list-hover-background-color: var(--watt-color-primary, 0.85);
+  --watt-nav-list-hover-background-color: rgb(from var(--watt-color-primary) r g b / 65%);
 }
