Fix drawer implementations

--- a/libs/dh/esett/feature-balance-responsible/src/lib/drawer/dh-drawer.component.html
+++ b/libs/dh/esett/feature-balance-responsible/src/lib/drawer/dh-drawer.component.html
@@ -78,7 +78,7 @@ limitations under the License.
         @defer (on viewport) {
           <watt-code [code]="xmlMessage.value()" language="xml" />
         } @placeholder {
-          <watt-spinner />
+          <watt-spinner vater center />
         }
       </vater-flex>
     </watt-drawer-content>
