--- a/libs/watt/package/dropdown/watt-dropdown.component.html
+++ b/libs/watt/package/dropdown/watt-dropdown.component.html
@@ -76,18 +76,6 @@ limitations under the License.
       <mat-option>{{ emDash }}</mat-option>
     }
 
-    @if (!hasGroups()) {
-      @for (option of filteredOptions$ | push; track option) {
-        <mat-option
-          [value]="option.value"
-          [disabled]="option.disabled"
-          [class.mat-mdc-option-multiple]="multiple()"
-        >
-          {{ option.displayValue }}
-        </mat-option>
-      }
-    }
-
     @if (hasGroups()) {
       @for (item of filteredGroupedOptions$ | push; track item) {
         @if ("options" in item) {
@@ -103,6 +91,16 @@ limitations under the License.
             }
           </mat-optgroup>
         }
+      }
+    } @else {
+      @for (option of filteredOptions$ | push; track option) {
+        <mat-option
+          [value]="option.value"
+          [disabled]="option.disabled"
+          [class.mat-mdc-option-multiple]="multiple()"
+        >
+          {{ option.displayValue }}
+        </mat-option>
       }
     }
   </mat-select>
