--- a/libs/watt/package/core/styles/@energinet-datahub/watt/_index.scss
+++ b/libs/watt/package/core/styles/@energinet-datahub/watt/_index.scss
@@ -12,6 +12,7 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 @use "./theme/light-theme.scss";
+@use "./theme/material-overwrites/expansion-panel";
 @use "./theme/material-overwrites/datepicker";
 @use "./theme/material-overwrites/snack-bar";
 
