Added groups to dropdown (#4822)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/watt/package/dropdown/watt-dropdown.component.scss
+++ b/libs/watt/package/dropdown/watt-dropdown.component.scss
@@ -107,10 +107,6 @@ watt-dropdown {
   --watt-input-color: var(--watt-typography-text-color);
   padding: 0;
 
-  mat-option:nth-of-type(2) {
-    border-top: 1px solid var(--watt-color-neutral-grey-300);
-  }
-
   .mat-select-search-inner-row .mat-select-search-input,
   mat-option.contains-mat-select-search {
     height: 48px;
@@ -161,6 +157,11 @@ watt-dropdown {
     color: var(--watt-input-color);
   }
 
+  .mat-mdc-optgroup-label {
+    @include watt.typography-watt-headline-6;
+    color: var(--watt-input-color);
+  }
+
   .mat-mdc-option.mdc-list-item .mat-select-search-no-entries-found {
     padding: var(--watt-space-s);
   }
@@ -172,6 +173,10 @@ watt-dropdown {
 
   :not(.mat-mdc-option-multiple) .mat-pseudo-checkbox {
     display: none;
+  }
+
+  .mat-mdc-option-multiple .mat-pseudo-checkbox {
+    display: inline-block;
   }
 
   .mat-pseudo-checkbox,
