--- a/libs/watt/package/table/watt-table.component.scss
+++ b/libs/watt/package/table/watt-table.component.scss
@@ -153,11 +153,13 @@ watt-table .mat-mdc-table {
   .watt-table-align-center,
   .watt-table-align-center .mat-sort-header-container {
     justify-content: center;
+    text-align: center;
   }
 
   .watt-table-align-right,
   .watt-table-align-right .mat-sort-header-container {
     justify-content: right;
+    text-align: right;
   }
 }
 
