UI/UX adjustments (#4790)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Dzhavat Ushev <dzu@energinet.dk>
Co-authored-by: frontend-specialisten <alexander@frontend-specialisten.dk>

--- a/libs/watt/package/core/styles/@energinet-datahub/watt/_index.scss
+++ b/libs/watt/package/core/styles/@energinet-datahub/watt/_index.scss
@@ -12,6 +12,7 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 @use "./theme/light-theme.scss";
+@use "./theme/material-overwrites/expansion-panel";
 @use "./theme/material-overwrites/datepicker";
 @use "./theme/material-overwrites/snack-bar";
 
@@ -20,6 +21,8 @@
 @use "../../chips";
 @use "../../elevation";
 @use "../../hr";
+@use "../../radius";
+@use "../../transitions";
 @use "../../table";
 @use "../../tokens";
 @use "../../tooltip";
@@ -50,4 +53,8 @@ textarea {
   */
 .cdk-overlay-pane[class="cdk-overlay-pane"] {
   transform: none !important;
+}
+
+.mat-mdc-dialog-surface.mdc-dialog__surface {
+  --mat-dialog-container-shape: var(--watt-radius-m);
 }
