--- a/libs/watt/package/core/styles/@energinet-datahub/watt/theme/material-overwrites/_expansion-panel.scss
+++ b/libs/watt/package/core/styles/@energinet-datahub/watt/theme/material-overwrites/_expansion-panel.scss
@@ -11,41 +11,11 @@
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 // See the License for the specific language governing permissions and
 // limitations under the License.
-:host {
-  display: block;
-}
 
-.sidenav-container {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-}
-
-.sidenav {
-  display: flex;
-  justify-content: start;
-}
-
-.selected-actor-container {
-  margin-top: auto;
-  padding: var(--watt-space-m);
-}
-
-.logo--sidenav {
-  width: 60%;
-  margin: var(--watt-space-m) 0;
-}
-
-.toolbar {
-  &__heading {
-    margin-left: var(--watt-space-m);
-  }
-
-  &__actions {
-    align-items: center;
-    display: flex;
-    gap: 1rem;
-    margin-left: auto;
-    margin-right: var(--watt-space-s);
-  }
+/*
+  Override for the expansion indicator rotation
+  Increased specificity to avoid using !important
+*/
+body .mat-expansion-panel .mat-expansion-panel-header.mat-expanded .mat-expansion-indicator {
+  transform: rotate(-180deg);
 }
