--- a/libs/watt/package/shell/nav-list/watt-nav-list.component.scss
+++ b/libs/watt/package/shell/nav-list/watt-nav-list.component.scss
@@ -21,19 +21,24 @@ watt-nav-list {
 
     a {
       @include watt.space-inset-squish-m;
+      padding: var(--watt-space-s);
       display: block;
       border-left: var(--watt-space-xs) solid transparent;
+      border-radius: var(--watt-space-s);
       color: var(--watt-color-neutral-white);
       text-decoration: none;
     }
 
-    a:hover,
-    a.active {
+    a:hover {
+      transition: background-color linear var(--watt-faster-than-a-blink-of-an-eye);
+    }
+
+    a:hover {
       background-color: var(--watt-nav-list-hover-background-color);
     }
 
     a.active {
-      border-left-color: var(--watt-color-secondary);
+      background-color: var(--watt-nav-list-active-background-color);
     }
   }
 
@@ -46,11 +51,13 @@ watt-nav-list {
     .mat-expansion-panel-header.mat-expanded:hover,
     .mat-expansion-panel:not(.mat-expanded)
       .mat-expansion-panel-header:hover:not([aria-disabled="true"]) {
+      transition: background-color linear var(--watt-faster-than-a-blink-of-an-eye);
       background-color: var(--watt-nav-list-hover-background-color);
     }
 
     .mat-expansion-panel-header {
-      padding-left: calc(var(--watt-space-xs) + var(--watt-space-m));
+      border-radius: var(--watt-space-s);
+      padding-left: calc(var(--watt-space-xs) + var(--watt-space-s));
       height: 40px;
     }
 
@@ -69,7 +76,7 @@ watt-nav-list {
     }
 
     watt-nav-list-item a {
-      padding-left: var(--watt-space-l);
+      padding-left: var(--watt-space-m);
     }
   }
 }
