--- a/libs/dh/admin/feature-user-roles/src/lib/user-roles.component.html
+++ b/libs/dh/admin/feature-user-roles/src/lib/user-roles.component.html
@@ -54,7 +54,7 @@ limitations under the License.
           [dataSource]="actor.userRoles | filterUserRoles: selectMode() | userRolesIntoTable"
           [selection]="actor.userRoles | filterUserRoles: false"
           [columns]="columns"
-          sortBy="marketRole"
+          sortBy="name"
           sortDirection="asc"
           [selectable]="selectMode()"
           (selectionChange)="selectionChanged(actor.id, $event, actor.userRoles)"
