--- a/libs/dh/admin/feature-user-roles/src/lib/user-roles.component.html
+++ b/libs/dh/admin/feature-user-roles/src/lib/user-roles.component.html
@@ -15,12 +15,12 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <dh-result [loading]="loading()" [hasError]="hasError()">
-  <mat-accordion *transloco="let t; read: 'admin.userManagement.tabs.roles'" multi>
+  <mat-accordion *transloco="let t; prefix: 'admin.userManagement.tabs.roles'" multi>
     @for (actor of userRolesPerActor(); track actor.id) {
       <watt-expandable-card
         variant="solid"
         [expanded]="expanded()"
-        *transloco="let translateMarketRole; read: 'marketParticipant.marketRoles'"
+        *transloco="let translateMarketRole; prefix: 'marketParticipant.marketRoles'"
       >
         @let title =
           actor.glnOrEicNumber +
