chore(dh): rename component

--- a/libs/dh/admin/feature-user-roles/src/lib/user-roles.component.html
+++ b/libs/dh/admin/feature-user-roles/src/lib/user-roles.component.html
@@ -50,7 +50,7 @@ limitations under the License.
           </watt-field-error>
         }
 
-        <dh-user-roles-table
+        <dh-basic-user-roles-table
           [actor]="actor"
           [selectMode]="selectMode()"
           (selectionChanged)="selectionChanged(actor.id, $event, actor.userRoles)"
