--- a/libs/dh/core/shell/src/lib/dh-core-shell.component.html
+++ b/libs/dh/core/shell/src/lib/dh-core-shell.component.html
@@ -30,6 +30,7 @@ limitations under the License.
   </ng-container>
 
   <ng-container watt-shell-toolbar>
+    <watt-portal-outlet name="toolbar" />
     @if (breadcrumbService.breadcrumbs().length > 0) {
       <watt-breadcrumbs>
         @for (breadcrumb of breadcrumbService.breadcrumbs(); track $index) {
