fix(styles): exclude watt-drawer-heading from min-width constraint in vater-row

--- a/libs/watt/package/core/styles/_vater.scss
+++ b/libs/watt/package/core/styles/_vater.scss
@@ -21,7 +21,7 @@
   [vater-stack] {
     align-items: center;
 
-    &.vater-row > * {
+    &.vater-row > *:not(watt-drawer-heading) {
       min-width: max-content;
     }
 
