--- a/libs/watt/package/table/watt-table.component.html
+++ b/libs/watt/package/table/watt-table.component.html
@@ -101,7 +101,7 @@ limitations under the License.
           @defer (when !column.value.expandable || expanded().includes(row)) {
             @if (getColumnTemplate(column.value); as template) {
               <div class="watt-table-cell-wrapper">
-                <ng-container *ngTemplateOutlet="template; context: { $implicit: row }" />
+                <ng-container *ngTemplateOutlet="template; context: { $implicit: row, index }" />
               </div>
             } @else {
               {{ getColumnCell(column.value, row) }}
@@ -110,7 +110,7 @@ limitations under the License.
         } @else {
           @if (getColumnTemplate(column.value); as template) {
             <div class="watt-table-cell-wrapper">
-              <ng-container *ngTemplateOutlet="template; context: { $implicit: row }" />
+              <ng-container *ngTemplateOutlet="template; context: { $implicit: row, index }" />
             </div>
           } @else {
             {{ getColumnCell(column.value, row) }}
