Make watt-drawer-heading/actions shrinkable

--- a/libs/watt/package/button/watt-button.component.scss
+++ b/libs/watt/package/button/watt-button.component.scss
@@ -184,6 +184,7 @@ watt-button {
       .content-wrapper {
         display: flex;
         gap: var(--watt-space-s);
+        white-space: nowrap;
       }
 
       .content-wrapper--loading {
