--- a/libs/watt/package/icon/+storybook/storybook-icon-overview.component.html
+++ b/libs/watt/package/icon/+storybook/storybook-icon-overview.component.html
@@ -68,6 +68,10 @@ limitations under the License.
     <figcaption>custom-flag-fi</figcaption>
   </figure>
   <figure>
+    <watt-flag country="GB" size="xl" />
+    <figcaption>custom-flag-gb</figcaption>
+  </figure>
+  <figure>
     <watt-flag country="PL" size="xl" />
     <figcaption>custom-flag-pl</figcaption>
   </figure>
