fix(dh): add more tests to user roles component

--- a/libs/dh/admin/feature-user-management/src/lib/details/details.component.html
+++ b/libs/dh/admin/feature-user-management/src/lib/details/details.component.html
@@ -75,7 +75,7 @@ limitations under the License.
 
         <watt-tab [label]="t('roles.tabLabel')">
           @defer {
-            <dh-user-roles [id]="user.id" [expanded]="false" />
+            <dh-user-roles-container [id]="user.id" [expanded]="false" />
           }
         </watt-tab>
 
